--- a/main.css
+++ b/main.css
@@ -19,14 +19,26 @@ button {
   cursor: pointer;
 }
 
+textarea {
+  width: 520px;
+  height: 22px;
+  resize: none;
+  border: none;
+  outline: none;
+}
+
 .nav-bar__container {
+  position: fixed;
+  top: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 975px;
   height: 60px;
+  background-color: white;
   padding: 12px 0;
   margin: auto;
+  z-index: 1;
 }
 
 .nav-bar__left,
@@ -84,18 +96,18 @@ button {
 }
 
 .main {
+  position: relative;
   display: flex;
   width: 975px;
   height: 100%;
-  background-color: gray;
-  margin: 28px auto;
+  margin: 68px auto;
 }
 
 .main-feeds {
   display: flex;
   flex-direction: column;
   width: 614px;
-  background-color: tomato;
+  border: 2px solid lightgrey;
 }
 
 .feed-profile {
@@ -127,7 +139,7 @@ button {
 }
 
 .article-img {
-  width: 614px;
+  width: 610px;
   height: 614px;
 }
 
@@ -142,6 +154,16 @@ button {
 
 .feed-icon-bar__left i {
   font-size: 22px;
+  transition: transform 200ms ease-in;
+}
+
+.feed-icon-bar__left i:hover {
+  transform: scale(1.1);
+  opacity: 0.7;
+}
+
+.feed-icon-bar__left button:nth-child(3) i {
+  font-size: 20px;
 }
 
 .feed-icon-bar__bookmark {
@@ -164,4 +186,190 @@ button {
   margin-left: 18px;
   border-radius: 50%;
   margin-right: 6px;
+}
+
+.article-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 18px;
+}
+
+.article-post {
+  display: flex;
+  align-items: center;
+}
+
+.post__id {
+  font-size: 14px;
+  font-weight: bold;
+  margin-right: 8px;
+}
+
+.article-comments {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 18px;
+}
+
+.article-comment__row {
+  display: flex;
+}
+
+.comment__id {
+  font-size: 14px;
+  font-weight: bold;
+  margin-right: 8px;
+}
+
+.article-update__time {
+  font-size: 14px;
+  font-weight: bold;
+  color: #989898;
+  margin-left: 18px;
+}
+
+.article-comment__form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 6px 18px;
+}
+
+.comment__input {
+  width: 520px;
+  font-size: 16px;
+  background-color: transparent;
+  padding: 6px 0;
+  border: none;
+  outline: none;
+}
+
+.comment__button {
+  font-size: 18px;
+  font-weight: bold;
+  color: #c4e1fb;
+  transition: color 200ms ease-in;
+}
+
+.comment__button:hover {
+  color: #0095f7;
+}
+
+.main-right {
+  position: fixed;
+  top: 90;
+  width: 300px;
+}
+
+.right-profile {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 48px;
+  margin-top: 8px;
+}
+
+.right-profile__image {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  margin-right: 12px;
+}
+
+.right-profile-description {
+  display: flex;
+  flex-direction: column;
+}
+
+.right-profile__id {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.right-profile__name {
+  font-weight: bold;
+  color: #00000070;
+}
+
+.right-story {
+  height: 300px;
+  margin-top: 24px;
+  padding: 12px 18px 0 18px;
+  border: 2px solid lightgrey;
+  overflow: hidden;
+}
+
+.story-header {
+  display: flex;
+  justify-content: space-between;
+  height: 32px;
+  border-radius: 5px;
+}
+
+.story-header__text1,
+.story-header__text2 {
+  font-weight: bold;
+}
+
+.story-header__text1 {
+  color: #00000070;
+}
+
+.story-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 8px;
+}
+
+.story-left {
+  display: flex;
+}
+
+.story-row__image {
+  width: 32px;
+  height: 32px;
+  border: 2px solid transparent;
+  background-image: linear-gradient(#fff, #fff),
+    linear-gradient(to right, hotpink 0%, orange 100%);
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  border-radius: 50%;
+  margin-right: 8px;
+}
+
+.story-row__id,
+.story-row__follow {
+  font-weight: bold;
+}
+
+.story-row__id {
+  font-size: 14px;
+}
+
+.story-row__follow {
+  font-size: 12px;
+  color: #00000070;
+  margin-top: 6px;
+}
+
+.story-left__follow-text {
+  font-size: 14px;
+  font-weight: bold;
+  color: #0095f6;
+}
+
+@media screen and (max-width: 950px) {
+  .nav-bar__container {
+    width: 614px;
+  }
+  .main {
+    width: 614px;
+  }
+  .main-right {
+    display: none;
+  }
 }
